--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Gaurav Singh<title>
+</head>
+<body>
+  <h1>Hi!</h1>
+  <footer>footer</footer>
+</body>
+</html>
