--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Gaurav Singh<title>
+  <title>Gaurav Singh</title>
 </head>
 <body>
   <h1>Hi!</h1>
